doc: items api
