# api/response.go
@@ -5,3 +5,6 @@ import queries "account/config/sqlc"
 type GetMeResponse struct {
 	Resource queries.User
 }
+type CreateItemResponse struct {
+	Resource queries.User
+}
