# internal/controller/me_controller.go
@@ -16,7 +16,7 @@ type MeController struct{}
 //	@Accept		json
 //	@Produce	json
 //	@Success	200	{object}	api.GetMeResponse
-//	@Failure	401 {string}  无效的JWT
+//	@Failure	401	{string}	string	无效的JWT
 //	@Router		/api/v1/me [get]
 func (ctrl *MeController) Get(c *gin.Context) {
 	me, _ := c.Get("me")
